--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.4.6",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "uuid": "^8.3.1"
