--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 API_PORT=3000
 JWT_SECRET=blablabla
 BASE_URL=localhost:3000
+DB_USERNAME=
+DB_PASSWORD=
+DB_NAME=
+DOCKER_COMPOSE_PORT=80
+DB_DOCKER_COMPOSE_PORT=
