--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mime": "^2.4.6",
     "pg": "^8.4.2",
     "sequelize": "^6.3.5",
+    "swagger-ui-express": "^4.1.4",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
