--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3'
+version: "3"
 
 services:
   postgres:
     image: postgres:latest
     volumes:
-      - /data/ignite-cross-chain-bridge-backend/postgres/data:/var/lib/postgresql/data
+      - /data/file-worker/postgres/data:/var/lib/postgresql/data
     expose:
       - 5432
     environment:
@@ -12,7 +12,7 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
     ports:
-      - '0.0.0.0:${DB_DOCKER_COMPOSE_PORT}:5432'
+      - "0.0.0.0:${DB_DOCKER_COMPOSE_PORT}:5432"
     restart: unless-stopped
   file-worker:
     build: .
